internal/gatewayapi/testdata/backendtlspolicy-default-ns.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      name: gateway-btls
      namespace: envoy-gateway
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      name: httproute-btls
      namespace: envoy-gateway
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-btls
          sectionName: http
      rules:
        - matches:
            - path:
                type: Exact
                value: "/exact"
          backendRefs:
            - name: http-backend
              namespace: default
              port: 8080
            - name: backend-ip-tls-1
              namespace: default
              kind: Backend
              group: gateway.envoyproxy.io
            - name: backend-ip-tls-2
              namespace: default
              kind: Backend
              group: gateway.envoyproxy.io
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      name: httproute-with-wrong-section-name
      namespace: envoy-gateway
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-btls
          sectionName: http2
      rules:
        - matches:
            - path:
                type: Exact
                value: "/exact"
          backendRefs:
            - name: http-backend
              namespace: default
              port: 8080
            - name: backend-ip-tls-1
              namespace: default
              kind: Backend
              group: gateway.envoyproxy.io
            - name: backend-ip-tls-2
              namespace: default
              kind: Backend
              group: gateway.envoyproxy.io
referenceGrants:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: ReferenceGrant
    metadata:
      name: refg-route-svc
      namespace: default
    spec:
      from:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          namespace: envoy-gateway
        - group: gateway.networking.k8s.io
          kind: Gateway
          namespace: envoy-gateway
        - group: gateway.networking.k8s.io
          kind: BackendTLSPolicy
          namespace: default
      to:
        - group: ""
          kind: Service
        - group: gateway.envoyproxy.io
          kind: Backend
services:
  - apiVersion: v1
    kind: Service
    metadata:
      name: http-backend
      namespace: default
    spec:
      clusterIP: 10.11.12.13
      ports:
        - port: 8080
          name: http
          protocol: TCP
          targetPort: 8080

endpointSlices:
  - apiVersion: discovery.k8s.io/v1
    kind: EndpointSlice
    metadata:
      name: endpointslice-http-backend
      namespace: default
      labels:
        kubernetes.io/service-name: http-backend
    addressType: IPv4
    ports:
      - name: http
        protocol: TCP
        port: 8080
    endpoints:
      - addresses:
          - "10.244.0.11"
        conditions:
          ready: true

configMaps:
  - apiVersion: v1
    kind: ConfigMap
    metadata:
      name: ca-cmap
      namespace: default
    data:
      ca.crt: |
        -----BEGIN CERTIFICATE-----
        MIIDJzCCAg+gAwIBAgIUAl6UKIuKmzte81cllz5PfdN2IlIwDQYJKoZIhvcNAQEL
[...]
        -----END CERTIFICATE-----
backendTLSPolicies:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls
      namespace: default
    spec:
      targetRefs:
        - group: ""
          kind: Service
          name: http-backend
          sectionName: http
      validation:
        caCertificateRefs:
          - name: ca-cmap
            group: ""
            kind: ConfigMap
        hostname: example.com
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls-backend-ip-1
      namespace: default
    spec:
      targetRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-ip-tls-1
      validation:
        caCertificateRefs:
          - name: ca-cmap
            group: ''
            kind: ConfigMap
        hostname: ip-backend
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls-backend-ip-2
      namespace: default
    spec:
      targetRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-ip-tls-2
          sectionName: 3443
      validation:
        caCertificateRefs:
          - name: ca-cmap
            group: ''
            kind: ConfigMap
        hostname: ip-backend
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-ip-tls-1
      namespace: default
    spec:
      endpoints:
        - ip:
            address: 2.2.2.2
            port: 3443
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-ip-tls-2
      namespace: default
    spec:
      endpoints:
        - ip:
            address: 3.3.3.3
            port: 3443
